--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             <button type="submit">Add</button>
         </form>
     </section>
-
-    
+    <script src="./script.js"></script>
 </body>
 </html>
