All books saved in the collection displayed in the top part of the page

--- a/index.html
+++ b/index.html
@@ -7,26 +7,30 @@
     <title>Awesome Books</title>
 </head>
 <body>
-    <section class="headline">
+    <section class="bookList">
         <h1>Awesome Books</h1>
-        <p>lorem ipsum</p>
-        <p>Testeroo Testyy</p>
-        <button type="button">Remove</button>
-    </section>
-    <hr>
-    <section class="headline">
-        <p>Second book</p>
-        <p>Testeroo Testyy</p>
-        <button type="button">Remove</button>
-    </section>
+        <!-- <article class="headline">
+            <p>lorem ipsum</p>
+            <p>Testeroo Testyy</p>
+            <button type="button">Remove</button>
+        </article>
+        <hr>
+        <article class="headline">
+            <p>Second book</p>
+            <p>Testeroo Testyy</p>
+            <button type="button">Remove</button>
+        </article>
+        <hr> -->
+    </section> 
     <hr>
     <section>
+       
         <form action="#">
             <label for="title"></label>
             <input type="text" id="title" name="title" placeholder="Title"><br><br>
             <label for="author"></label>
             <input type="text" id="author" name="author" placeholder="Author"><br><br>
-            <button type="submit">Add</button>
+            <button type="submit" id="addBook">Add</button>
         </form>
     </section>
     <script src="./script.js"></script>
