--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <hr>
     <section>
        
-        <form action="#">
+        <form action="#" id="addBookForm">
             <label for="title"></label>
-            <input type="text" id="title" name="title" placeholder="Title"><br><br>
+            <input type="text" id="title" name="title" placeholder="Title" class="title"><br><br>
             <label for="author"></label>
-            <input type="text" id="author" name="author" placeholder="Author"><br><br>
-            <button type="submit" id="addBook">Add</button>
+            <input type="text" id="author" name="author" placeholder="Author" class="author"><br><br>
+            <button type="button" id="addBook">Add</button>
         </form>
     </section>
     <script src="./script.js"></script>
