--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
             <button type="button" id="addBook">Add</button>
         </form>
     </section>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
