--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Awesome Books</title>
-</head>
-<body>
-    <section class="bookList">
-        <h1>Awesome Books</h1>
-        <!-- <article class="headline">
-            <p>lorem ipsum</p>
-            <p>Testeroo Testyy</p>
-            <button type="button">Remove</button>
-        </article>
-        <hr>
-        <article class="headline">
-            <p>Second book</p>
-            <p>Testeroo Testyy</p>
-            <button type="button">Remove</button>
-        </article>
-        <hr> -->
-    </section> 
-    <hr>
-    <section>
-       
-        <form action="#" id="addBookForm">
-            <label for="title"></label>
-            <input type="text" id="title" name="title" placeholder="Title" class="title"><br><br>
-            <label for="author"></label>
-            <input type="text" id="author" name="author" placeholder="Author" class="author"><br><br>
-            <button type="button" id="addBook">Add</button>
-        </form>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Awsome Books</title>
+  </head>
+  <body>
+
+    <section class="view-books">
+      <h1>Awesome books</h1>
+
+      <article class="books">
+
+      </article>
+      <div class="underline"></div>
     </section>
+
+    <form id="form">
+      <article class="new-book">
+        <h3>Add a new book</h3>
+
+        <div class="input">
+          <input id="new-title" name="title" placeholder="Title" /><br /><br />
+          <input
+            id="new-author"
+            name="author"
+            placeholder="Author"
+          /><br /><br />
+        </div>
+
+        <button id="add-book" type="submit">Add</button>
+      </article>
+    </form>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
