Code refactored to use Javascript classes

--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
         <h3>Add a new book</h3>
 
         <div class="input">
-          <input id="new-title" name="title" placeholder="Title" /><br /><br />
+          <input id="new-title" name="title" placeholder="Title" /><br />
+          <p id="empty-title"></p>
+          <br />
           <input
             id="new-author"
             name="author"
             placeholder="Author"
-          /><br /><br />
+          />
+          <p id="empty-author"></p>
+          <br />
+          <br />
         </div>
 
         <button id="add-book" type="submit">Add</button>
