--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Awsome Books</title>
   </head>
   <body>
+    <!-- navbar Start -->
+    <nav class="navbar flex-row">
+      <div class="logoBox"><a href="">Awesome Books</a></div>
+      <ul class="flex-row navbarList">
+        <li><a href="">List</a></li>
+        <li><a href="">Add new</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </nav>
+
+    <!-- navbar End -->
 
     <section class="view-books flex-column">
       <h1>Awesome books</h1>
