--- a/index.html
+++ b/index.html
@@ -9,25 +9,32 @@
   </head>
   <body>
     <!-- navbar Start -->
-    <nav class="navbar flex-row">
+    <header class="flex-column">
+      <nav class="navbar flex-row">
       <div class="logoBox"><a href="">Awesome Books</a></div>
       <ul class="flex-row navbarList">
-        <li><a href="">List</a></li>
-        <li><a href="">Add new</a></li>
-        <li><a href="">Contact</a></li>
+        <li id="link-list"><a href="">List</a></li>
+        <li id="link-add"><a href="">Add new</a></li>
+        <li id="link-contact"><a href="">Contact</a></li>
       </ul>
     </nav>
+    <div class="date">
+      march 19th 2023, 10:33:54
+    </div>
+    </header>
+    
 
     <!-- navbar End -->
+    <div class="flex-column">
+      <h1 class="headline">All awesome books</h1>
+      <section class="view-books flex-column">
 
-    <section class="view-books flex-column">
-      <h1>Awesome books</h1>
-
-      <article class="books">
-
-      </article>
-      <div class="underline"></div>
-    </section>
+        <article class="books">
+  
+        </article>
+        <div class="underline"></div>
+      </section>
+    </div>
 
     <form id="form" class="flex-column form">
       <article class="new-book">
@@ -48,6 +55,22 @@
         <button id="add-book" class="add-book" type="submit">Add</button>
       </article>
     </form>
+    <section class="contact flex-column">
+      <h2>Contact information</h2>
+      <div class="contact-info">
+        <p>Do you have any question or you want to say Hello?<br>
+          You can reach out to us!
+        </p>
+        <ul class="info">
+          <li class="contact-email">otmaneechchafyky5@gmail.com</li>
+          <li class="contact-number">+212622394044</li>
+          <li class="contact-email">Our adress: Microstreet 73, 8797 CaMo, Africa </li>
+        </ul>
+      </div>
+    </section>
+    <footer class="flex-column">
+      <p>Copyright©2023 momotmane. Microstreet 73, 8797 CaMo, Africa. All rights reserved</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
